7-Nov Updates
