# docs/swagger.json
@@ -11,11 +11,16 @@
         },
         "version": "0.1"
     },
-    "host": "ams.lscm.hk",
+    "host": "20.239.95.146",
     "basePath": "/oms/",
     "paths": {
         "/addDeliveryOrder": {
             "post": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Create adhoc delivery order.",
                 "consumes": [
                     "application/json"
@@ -34,7 +39,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.AddDeliveryOrderDTO"
+                            "$ref": "#/definitions/dto.AddDeliveryOrderDTO"
                         }
                     }
                 ],
@@ -43,6 +48,12 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/orderManagement.AddDeliveryOrderResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.FailResponse"
                         }
                     }
                 }
@@ -78,12 +89,23 @@
                         "schema": {
                             "$ref": "#/definitions/orderManagement.CancelDeliveryOrderResponse"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.FailResponse"
+                        }
                     }
                 }
             }
         },
         "/getDeliveryOrder": {
             "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Get the list of delivery order by order status .",
                 "consumes": [
                     "*/*"
@@ -95,11 +117,30 @@
                     "Order Management"
                 ],
                 "summary": "Get Delivery Order.",
+                "parameters": [
+                    {
+                        "type": "array",
+                        "items": {
+                            "type": "string"
+                        },
+                        "collectionFormat": "csv",
+                        "description": "Order Status",
+                        "name": "orderStatus",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/orderManagement.OrderListBody"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.FailResponse"
                         }
                     }
                 }
@@ -124,6 +165,12 @@
                         "schema": {
                             "$ref": "#/definitions/mapHandling.GetDutyRoomsResponse"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.FailResponse"
+                        }
                     }
                 }
             }
@@ -146,6 +193,12 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/mapHandling.GetFloorPlanResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.FailResponse"
                         }
                     }
                 }
@@ -191,7 +244,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.LoginAdminDTO"
+                            "$ref": "#/definitions/dto.LoginAdminDTO"
                         }
                     }
                 ],
@@ -231,7 +284,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handlers.LoginStaffDTO"
+                            "$ref": "#/definitions/dto.LoginStaffDTO"
                         }
                     }
                 ],
@@ -287,6 +340,11 @@
         },
         "/renewToken": {
             "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
                 "description": "Using Valid Token to renew token before expired",
                 "consumes": [
                     "*/*"
@@ -297,12 +355,81 @@
                 "tags": [
                     "Login Auth"
                 ],
-                "summary": "Websocket Connection.",
+                "summary": "Renew JWT Token.",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/loginAuth.LogoutResponse"
+                            "$ref": "#/definitions/loginAuth.LoginResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.FailResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/reportJobStatus": {
+            "post": {
+                "description": "Receive the delivery job updated status.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Order Management"
+                ],
+                "summary": "Report Job Status.",
+                "parameters": [
+                    {
+                        "description": "Return Job Status Parameters",
+                        "name": "todo",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.ReportJobStatusDTO"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.ResponseHeader"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.FailResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/reportSystemStatus": {
+            "post": {
+                "description": "Get current system status.",
+                "consumes": [
+                    "*/*"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Order Management"
+                ],
+                "summary": "Report System Status.",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/orderManagement.ReportSystemStatusResponse"
                         }
                     },
                     "400": {
@@ -427,6 +554,12 @@
                         "schema": {
                             "$ref": "#/definitions/orderManagement.TriggerHandlingOrderResponse"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.FailResponse"
+                        }
                     }
                 }
             }
@@ -461,13 +594,19 @@
                         "schema": {
                             "$ref": "#/definitions/orderManagement.UpdateDeliveryOrderResponse"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.FailResponse"
+                        }
                     }
                 }
             }
         }
     },
     "definitions": {
-        "handlers.AddDeliveryOrderDTO": {
+        "dto.AddDeliveryOrderDTO": {
             "type": "object",
             "properties": {
                 "endLocationId": {
@@ -496,15 +635,7 @@
                 }
             }
         },
-        "handlers.CancelDeliveryOrderDTO": {
-            "type": "object",
-            "properties": {
-                "scheduleId": {
-                    "type": "integer"
-                }
-            }
-        },
-        "handlers.LoginAdminDTO": {
+        "dto.LoginAdminDTO": {
             "type": "object",
             "properties": {
                 "password": {
@@ -515,7 +646,7 @@
                 }
             }
         },
-        "handlers.LoginStaffDTO": {
+        "dto.LoginStaffDTO": {
             "type": "object",
             "properties": {
                 "dutyLocationId": {
@@ -523,6 +654,46 @@
                 },
                 "username": {
                     "type": "string"
+                }
+            }
+        },
+        "dto.ReportJobStatusDTO": {
+            "type": "object",
+            "properties": {
+                "est": {
+                    "type": "string"
+                },
+                "eta": {
+                    "type": "string"
+                },
+                "jobId": {
+                    "type": "integer"
+                },
+                "location": {
+                    "type": "string"
+                },
+                "messageTime": {
+                    "type": "string"
+                },
+                "processingStatus": {
+                    "type": "string"
+                },
+                "robotId": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
+                "zone": {
+                    "type": "string"
+                }
+            }
+        },
+        "handlers.CancelDeliveryOrderDTO": {
+            "type": "object",
+            "properties": {
+                "scheduleId": {
+                    "type": "integer"
                 }
             }
         },
@@ -729,6 +900,9 @@
                     "items": {
                         "type": "object",
                         "properties": {
+                            "actualArrivalTime": {
+                                "type": "string"
+                            },
                             "endLocationId": {
                                 "type": "integer"
                             },
@@ -738,10 +912,16 @@
                             "endTime": {
                                 "type": "string"
                             },
+                            "expectingArrivalTime": {
+                                "type": "string"
+                            },
                             "expectingDeliveryTime": {
                                 "type": "string"
                             },
                             "expectingStartTime": {
+                                "type": "string"
+                            },
+                            "failedReason": {
                                 "type": "string"
                             },
                             "orderCreatedBy": {
@@ -775,6 +955,20 @@
                                 "type": "string"
                             }
                         }
+                    }
+                }
+            }
+        },
+        "orderManagement.ReportSystemStatusResponse": {
+            "type": "object",
+            "properties": {
+                "systemState": {
+                    "type": "string"
+                },
+                "systemStatus": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
                     }
                 }
             }
